# statistics

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  library.properties
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: github-actions.yml
examples/: stats_example.cc  welford_example.cc
examples/arduino/stats_example/: stats_example.ino
examples/cmake/: stats_example.cc
include/statistics/: statistics.h  welford.h
include/welford/: welford.h
src/: statistics.h
src/statistics/: statistics.cc
src/welford/: welford.cc
tests/: stats_test.cc  welford_test.cc
